Fix Bugs part3 - grid-gap

--- a/_base.scss
+++ b/_base.scss
@@ -281,7 +281,6 @@
 .form {
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
     &__rate {
         display: flex;
         align-items: center;
