--- a/contact/_main.scss
+++ b/contact/_main.scss
@@ -10,6 +10,10 @@
 }
 
 .form {
+    & > * {
+        margin-bottom: 20px;
+    }
+
     margin: 0 auto;
     padding-bottom: 20px;
     width: 90%;
