--- a/contact/style.css
+++ b/contact/style.css
@@ -472,7 +472,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  row-gap: 20px;
 }
 
 .form__rate {
@@ -837,6 +836,10 @@
   padding-bottom: 20px;
   width: 90%;
   max-width: 600px;
+}
+
+.form > * {
+  margin-bottom: 20px;
 }
 
 .form__name, .form .form__telephone-number, .form .form__message, .form .form__agreement-input, .form .form__email {
