--- a/style.css
+++ b/style.css
@@ -473,7 +473,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  row-gap: 20px;
 }
 
 .form__rate {
